--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -12,6 +12,7 @@ $NUMBER-TABS: 2;
 	position: absolute;
 	z-index: 1;
 	border-bottom: 1px solid color(WHITE);
+	background: rgba(0,0,0,0.6);
 
 	@media (prefers-color-scheme: dark) {
 		border-bottom: 1px solid color(DARK_GREY);
@@ -32,7 +33,6 @@ $NUMBER-TABS: 2;
 }
 
 .window_tab {
-	background: none;
 	color: color(WHITE);
 }
 .window_tab_selected {
@@ -60,6 +60,11 @@ $NUMBER-TABS: 2;
 	@include sm {
 		margin-top: $INTRO-MARGIN-TOP-MOBILE;
 		height: calc(130vh - #{$INTRO-MARGIN-TOP-MOBILE} - 2 * #{units(12)});
+
+		@media (prefers-color-scheme: dark) {
+			margin-top: 3.8em;
+			height : calc(100vh - 3.8em);
+		}
 	}
 }
 
