--- a/src/app/pages/event/event.component.scss
+++ b/src/app/pages/event/event.component.scss
@@ -9,6 +9,10 @@ $SIZE-REACTION-SMALL: units(4);
 
   @include sm {
     margin-top: units(10);
+
+    @media (prefers-color-scheme: dark) {
+      margin-top: 3.8em;
+    }
   }
 }
 
